@@ -3,6 +3,9 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.20
 
+	- The CUPS test suite did not undefine the PRINTER and
+	  LPDEST environment variables. This could lead to bogus
+	  test results (STR #380)
 	- The cupsLangDefault() function now works if you don't
 	  have the base OS localization installed (STR #418)
 	- The pdftops filter no longer needs to create temporary
